--- a/app/views/buyers/new.html.erb
+++ b/app/views/buyers/new.html.erb
@@ -17,7 +17,7 @@
         </div>
         <div class="col-sm-7">
           <div style="height:10px"> </div>
-          <%= link_to new_item_path, method: :get do %>
+          <%= link_to new_buyer_path, method: :get do %>
             <div class="card-body">
               <h4 class="card-title">喜茶(乐山路店)</h4>
             </div>
@@ -67,11 +67,9 @@
         </div>
         <div class="col-sm-7">
           <div style="height:10px"> </div>
-          <%= link_to new_item_path, method: :get do %>
-            <div class="card-body">
-              <h4 class="card-title">喜茶(乐山路店)</h4>
-            </div>
-          <% end %>
+          <div class="card-body">
+            <h4 class="card-title">喜茶(乐山路店)</h4>
+          </div>
         </div>
       </div>
       <ul class="list-group list-group-flush">
@@ -117,11 +115,9 @@
         </div>
         <div class="col-sm-7">
           <div style="height:10px"> </div>
-          <%= link_to new_item_path, method: :get do %>
-            <div class="card-body">
-              <h4 class="card-title">喜茶(乐山路店)</h4>
-            </div>
-          <% end %>
+          <div class="card-body">
+            <h4 class="card-title">喜茶(乐山路店)</h4>
+          </div>
         </div>
       </div>
       <ul class="list-group list-group-flush">
