--- a/app/views/carts/new.html.erb
+++ b/app/views/carts/new.html.erb
@@ -14,6 +14,7 @@
 
 <div style="height:20px"> </div>
 
+<% @this_seller = %>
 <div class="tab-content" id="nav-tabContent">
   <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab" tabindex="0">
     <div class="row">
@@ -32,7 +33,8 @@
             <div class="col-sm-8">
               <div style="height:10px"> </div>
               <div class="card-body">
-                <h5 class="card-title">喜茶(乐山路店)</h5>
+                <%# this_user = User.find_by(id: this_seller.user_id) %>
+                <h5 class="card-title"> 喜茶 </h5>
               </div>
             </div>
           </div>
