--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -11,23 +11,23 @@
     </div>
   <% end %>
 <div class="form-group">
-            <%= form.label :name, style: "display: block" %>
+            <%= form.label "商品名称", style: "display: block" %>
             <%= form.text_field :name ,:placeholder=>"点击此处，输入商品名称",:class=>"form-control"%>
           </div>
 
           <div class="form-group">
-            <%= form.label :price, style: "display: block" %>
+            <%= form.label "商品价格", style: "display: block" %>
             <%= form.text_field :price,:placeholder=>"点击此处，输入商品价格",:class=>"form-control"%>
           </div>
 
           <div class="form-group">
-            <%= form.label :content, style: "display: block" %>
+            <%= form.label "商品描述", style: "display: block" %>
             <%= form.text_area :content ,:placeholder=>"点击此处，输入商品描述",:class=>"form-control"%>
           </div>
           <div class="row">
             <div class="col-sm-7">
                 <div class="form-group">
-                  <%= form.label "logo：    " %>
+                  <%= form.label "商品图标 " %>
                   <div style="height:5px"> </div>
                   <%= form.file_field :image, accept: 'image/png,image/jpeg'%>
                 </div>
