--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -14,260 +14,65 @@
 </ul>
 <div style="height:30px"> </div>
 
-<div class="row">
-  <div class="col-sm-3">
-    <div class="card" style="width: 21rem;">
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">订单号: 1</li>
-        <li class="list-group-item">
-          <div class="row">
-            <div class="col-sm-4">
-              多肉葡萄
-            </div>
-            <div class="col-sm-3">
-              数量: 2
-            </div>
-            <div class="col-sm-5">
-              价格: 56RMB
-            </div>
-          </div>
-          <div style="height:5px"> </div>
-          <div class="row">
-            <div class="col-sm-4">
-              多肉青提
-            </div>
-            <div class="col-sm-3">
-              数量: 2
-            </div>
-            <div class="col-sm-5">
-              价格: 58RMB
-            </div>
-          </div>
-          <div style="height:5px"> </div>
-          <div class="row">
-            <div class="col-sm-4">
-              多肉莓莓
-            </div>
-            <div class="col-sm-3">
-              数量: 2
-            </div>
-            <div class="col-sm-5">
-              价格: 64RMB
-            </div>
-          </div>
-        </li>
-        <li class="list-group-item">地址: 南京市建邺区碧瑶花园</li>
-        <li class="list-group-item">店铺名称: 喜茶（乐山路店）</li>
-        <li class="list-group-item">
-          <div class="row">
-            <div class="col-sm-5">
-              <div style="height:5px"> </div>
-              总价: 178RMB
-            </div>
-            <div class="col-sm-3">
-              
-            </div>
-            <div class="col-sm-4">
-           <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-              评论
-            </button>
-              </div>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </div>
-  
-  <div class="col-sm-3">
-    <div class="card" style="width: 21rem;">
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">订单号: 2</li>
-        <li class="list-group-item">
-          <div class="row">
-            <div class="col-sm-4">
-              多肉葡萄
-            </div>
-            <div class="col-sm-3">
-              数量: 2
-            </div>
-            <div class="col-sm-5">
-              价格: 56RMB
-            </div>
-          </div>
-          <div style="height:5px"> </div>
-          <div class="row">
-            <div class="col-sm-4">
-              多肉青提
-            </div>
-            <div class="col-sm-3">
-              数量: 2
-            </div>
-            <div class="col-sm-5">
-              价格: 58RMB
-            </div>
-          </div>
-          <div style="height:5px"> </div>
-          <div class="row">
-            <div class="col-sm-4">
-              多肉莓莓
-            </div>
-            <div class="col-sm-3">
-              数量: 2
-            </div>
-            <div class="col-sm-5">
-              价格: 64RMB
-            </div>
-          </div>
-        </li>
-        <li class="list-group-item">地址: 南京市建邺区碧瑶花园</li>
-        <li class="list-group-item">店铺名称: 喜茶（乐山路店）</li>
-        <li class="list-group-item">
-          <div class="row">
-            <div class="col-sm-5">
-              <div style="height:5px"> </div>
-              总价: 178RMB
-            </div>
-            <div class="col-sm-3">
-              
-            </div>
-            <div class="col-sm-4">
-              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-            评论
-          </button>
-            </div>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </div>
-  
-  <div class="col-sm-3">
-    <div class="card" style="width: 21rem;">
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">订单号: 3</li>
-        <li class="list-group-item">
-          <div class="row">
-            <div class="col-sm-4">
-              多肉葡萄
-            </div>
-            <div class="col-sm-3">
-              数量: 2
-            </div>
-            <div class="col-sm-5">
-              价格: 56RMB
-            </div>
-          </div>
-          <div style="height:5px"> </div>
-          <div class="row">
-            <div class="col-sm-4">
-              多肉青提
-            </div>
-            <div class="col-sm-3">
-              数量: 2
-            </div>
-            <div class="col-sm-5">
-              价格: 58RMB
-            </div>
-          </div>
-          <div style="height:5px"> </div>
-          <div class="row">
-            <div class="col-sm-4">
-              多肉莓莓
-            </div>
-            <div class="col-sm-3">
-              数量: 2
-            </div>
-            <div class="col-sm-5">
-              价格: 64RMB
-            </div>
-          </div>
-        </li>
-        <li class="list-group-item">地址: 南京市建邺区碧瑶花园</li>
-        <li class="list-group-item">店铺名称: 喜茶（乐山路店）</li>
-        <li class="list-group-item">
-          <div class="row">
-            <div class="col-sm-5">
-              <div style="height:5px"> </div>
-              总价: 178RMB
-            </div>
-            <div class="col-sm-3">
-              
-            </div>
-            <div class="col-sm-4">
-              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-            评论
-          </button>
-            </div>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </div>
+<% @buyer = Buyer.find_by(user_id: current_user.id) %>
+<% @orders1=Order.where(buyer_id: @buyer.id, isCommented: false)%>
 
-  <div class="col-sm-3">
-    <div class="card" style="width: 21rem;">
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">订单号: 4</li>
-        <li class="list-group-item">
-          <div class="row">
-            <div class="col-sm-4">
-              多肉葡萄
-            </div>
-            <div class="col-sm-3">
-              数量: 2
-            </div>
-            <div class="col-sm-5">
-              价格: 56RMB
-            </div>
-          </div>
-          <div style="height:5px"> </div>
-          <div class="row">
-            <div class="col-sm-4">
-              多肉青提
-            </div>
-            <div class="col-sm-3">
-              数量: 2
-            </div>
-            <div class="col-sm-5">
-              价格: 58RMB
-            </div>
-          </div>
-          <div style="height:5px"> </div>
-          <div class="row">
-            <div class="col-sm-4">
-              多肉莓莓
-            </div>
-            <div class="col-sm-3">
-              数量: 2
-            </div>
-            <div class="col-sm-5">
-              价格: 64RMB
-            </div>
-          </div>
-        </li>
-        <li class="list-group-item">地址: 南京市建邺区碧瑶花园</li>
-        <li class="list-group-item">店铺名称: 喜茶（乐山路店）</li>
-        <li class="list-group-item">
-          <div class="row">
-            <div class="col-sm-5">
+<div class="row">
+  <% @count = 0%>
+  <% @orders1.each do |order|%>
+    <% @count += 1%>
+    <div class="col-sm-3">
+      <div class="card" style="width: 21rem;">
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">订单号: <%= @count %></li>
+          <% @tmp_order_items = OrderItem.where(order_id: order.id)%>
+          
+          <li class="list-group-item">
+            <% @tmp_order_items.each do |item|%>
+              <div class="row">
+                <div class="col-sm-4">
+                  <% tmp_item=Item.find_by(id: item.item_id)%>
+                  <%= tmp_item.name %>
+                </div>
+                <div class="col-sm-3">
+                  数量: <%= item.count%>
+                </div>
+                <div class="col-sm-5">
+                  价格: <%= item.money %>元
+                </div>
+              </div>
               <div style="height:5px"> </div>
-              总价: 178RMB
-            </div>
-            <div class="col-sm-3">
-              
-            </div>
-            <div class="col-sm-4">
-              <button type="button" class="btn btn-primary" style="width: 4rem;">
+            <% end %>
+          </li>
+          <% @tmp_seller=Seller.find_by(id: order.seller_id) %>
+          <% @tmp_user=User.find_by(id: @tmp_seller.user_id) %>
+          <li class="list-group-item">地址: <%= @tmp_seller.address %></li>
+          <li class="list-group-item">店铺名称: <%= @tmp_user.username %> </li>
+          <li class="list-group-item">
+            <div class="row">
+              <div class="col-sm-5">
+                <div style="height:5px"> </div>
+                总价: <%= order.money%>
+              </div>
+              <div class="col-sm-3">
+                
+              </div>
+              <div class="col-sm-4">
+            <!-- Button trigger modal -->
+              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
                 评论
               </button>
+                </div>
             </div>
-          </div>
-        </li>
-      </ul>
+          </li>
+        </ul>
+      </div>
+      <div style="height:20px"> </div>
     </div>
-  </div>
 
+    
+
+  <% end %>
   
 </div>
 
