--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -57,7 +57,7 @@
                 <%= shop_item.name %>
               </div>
               <div class="col-sm">
-               
+                <img src="<%= (url_for(shop_item.image)) %>" class="card-img-top" style="width:50px" alt="..." />
               </div>
               <div class="col-sm">
                 <%= shop_item.price %>元/杯
