--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -3,7 +3,7 @@
 <ul class="nav nav-tabs" id="myTab" role="tablist">
   <li class="nav-item" role="presentation">
     <%= link_to orders_path, method: :get do %>
-      <button class="nav-link active" id="home-tab" data-toggle="tab" data-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">待发货</button>
+      <button class="nav-link  active" id="home-tab" data-toggle="tab" data-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">待发货</button>
     <% end %>
   </li>
   <li class="nav-item" role="presentation">
@@ -14,274 +14,89 @@
 </ul>
 <div style="height:30px"> </div>
 
+<% @seller = Seller.find_by(user_id: current_user.id) %>
+<% @orders1=Order.where(seller_id: @seller.id, isProcessed: false)%>
+
 <div class="row">
-  <div class="col-sm-3">
-    <div class="card" style="width: 21rem;">
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">订单号: 1</li>
-        <li class="list-group-item">
-          <div class="row">
-            <div class="col-sm-4">
-              多肉葡萄
-            </div>
-            <div class="col-sm-3">
-              数量: 2
-            </div>
-            <div class="col-sm-5">
-              价格: 56RMB
-            </div>
-          </div>
-          <div style="height:5px"> </div>
-          <div class="row">
-            <div class="col-sm-4">
-              多肉青提
-            </div>
-            <div class="col-sm-3">
-              数量: 2
-            </div>
-            <div class="col-sm-5">
-              价格: 58RMB
-            </div>
-          </div>
-          <div style="height:5px"> </div>
-          <div class="row">
-            <div class="col-sm-4">
-              多肉莓莓
-            </div>
-            <div class="col-sm-3">
-              数量: 2
-            </div>
-            <div class="col-sm-5">
-              价格: 64RMB
-            </div>
-          </div>
-        </li>
-        <li class="list-group-item">地址: 南京市建邺区碧瑶花园</li>
-        <li class="list-group-item">店铺名称: 喜茶（乐山路店）</li>
-        <li class="list-group-item">用户地址: 北京航空航天大学</li>
-        <li class="list-group-item">
-          <div class="row">
-            <div class="col-sm-5">
+  <% @count = 0%>
+  <% @orders1.each do |order|%>
+    <% @count += 1%>
+    <div class="col-sm-3">
+      <div class="card" style="width: 21rem;">
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">订单号: <%= @count %></li>
+          <% @tmp_order_items = OrderItem.where(order_id: order.id)%>
+          
+          <li class="list-group-item">
+            <% @tmp_order_items.each do |item|%>
+              <div class="row">
+                <div class="col-sm-4">
+                  <% tmp_item=Item.find_by(id: item.item_id)%>
+                  <%= tmp_item.name %>
+                </div>
+                <div class="col-sm-3">
+                  数量: <%= item.count%>
+                </div>
+                <div class="col-sm-5">
+                  价格: <%= item.money %>元
+                </div>
+              </div>
               <div style="height:5px"> </div>
-              总价: 178RMB
-            </div>
-            <div class="col-sm-3">
-              
-            </div>
-            <div class="col-sm-4">
-              <button type="button" class="btn btn-primary" style="width: 4rem;">
+            <% end %>
+          </li>
+          <% @tmp_buyer=Buyer.find_by(id: order.buyer_id) %>
+          <% @tmp_user=User.find_by(id: @seller.user_id) %>
+          <li class="list-group-item">地址: <%= @seller.address %></li>
+          <li class="list-group-item">店铺名称: <%= @tmp_user.username%></li>
+          <li class="list-group-item">用户地址: <%= @tmp_buyer.address %></li>
+          <li class="list-group-item">
+            <div class="row">
+              <div class="col-sm-5">
+                <div style="height:5px"> </div>
+                总价: <%= order.money%>
+              </div>
+              <div class="col-sm-3">
+                
+              </div>
+              <div class="col-sm-4">
+            <!-- Button trigger modal -->
+              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
                 发货
               </button>
+                </div>
             </div>
-          </div>
-        </li>
-      </ul>
+          </li>
+        </ul>
+      </div>
+      <div style="height:20px"> </div>
     </div>
-  </div>
-  
-  <div class="col-sm-3">
-    <div class="card" style="width: 21rem;">
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">订单号: 2</li>
-        <li class="list-group-item">
-          <div class="row">
-            <div class="col-sm-4">
-              多肉葡萄
-            </div>
-            <div class="col-sm-3">
-              数量: 2
-            </div>
-            <div class="col-sm-5">
-              价格: 56RMB
-            </div>
-          </div>
-          <div style="height:5px"> </div>
-          <div class="row">
-            <div class="col-sm-4">
-              多肉青提
-            </div>
-            <div class="col-sm-3">
-              数量: 2
-            </div>
-            <div class="col-sm-5">
-              价格: 58RMB
-            </div>
-          </div>
-          <div style="height:5px"> </div>
-          <div class="row">
-            <div class="col-sm-4">
-              多肉莓莓
-            </div>
-            <div class="col-sm-3">
-              数量: 2
-            </div>
-            <div class="col-sm-5">
-              价格: 64RMB
-            </div>
-          </div>
-        </li>
-        <li class="list-group-item">地址: 南京市建邺区碧瑶花园</li>
-        <li class="list-group-item">店铺名称: 喜茶（乐山路店）</li>
-        <li class="list-group-item">用户地址: 北京航空航天大学</li>
-        <li class="list-group-item">
-          <div class="row">
-            <div class="col-sm-5">
-              <div style="height:5px"> </div>
-              总价: 178RMB
-            </div>
-            <div class="col-sm-3">
-              
-            </div>
-            <div class="col-sm-4">
-              <button type="button" class="btn btn-primary" style="width: 4rem;">
-                发货
-              </button>
-            </div>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </div>
-  
-  <div class="col-sm-3">
-    <div class="card" style="width: 21rem;">
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">订单号: 3</li>
-        <li class="list-group-item">
-          <div class="row">
-            <div class="col-sm-4">
-              多肉葡萄
-            </div>
-            <div class="col-sm-3">
-              数量: 2
-            </div>
-            <div class="col-sm-5">
-              价格: 56RMB
-            </div>
-          </div>
-          <div style="height:5px"> </div>
-          <div class="row">
-            <div class="col-sm-4">
-              多肉青提
-            </div>
-            <div class="col-sm-3">
-              数量: 2
-            </div>
-            <div class="col-sm-5">
-              价格: 58RMB
-            </div>
-          </div>
-          <div style="height:5px"> </div>
-          <div class="row">
-            <div class="col-sm-4">
-              多肉莓莓
-            </div>
-            <div class="col-sm-3">
-              数量: 2
-            </div>
-            <div class="col-sm-5">
-              价格: 64RMB
-            </div>
-          </div>
-        </li>
-        <li class="list-group-item">地址: 南京市建邺区碧瑶花园</li>
-        <li class="list-group-item">店铺名称: 喜茶（乐山路店）</li>
-        <li class="list-group-item">用户地址: 北京航空航天大学</li>
-        <li class="list-group-item">
-          <div class="row">
-            <div class="col-sm-5">
-              <div style="height:5px"> </div>
-              总价: 178RMB
-            </div>
-            <div class="col-sm-3">
-              
-            </div>
-            <div class="col-sm-4">
-              <button type="button" class="btn btn-primary" style="width: 4rem;">
-                发货
-              </button>
-            </div>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </div>
 
-  <div class="col-sm-3">
-    <div class="card" style="width: 21rem;">
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">订单号: 4</li>
-        <li class="list-group-item">
-          <div class="row">
-            <div class="col-sm-4">
-              多肉葡萄
-            </div>
-            <div class="col-sm-3">
-              数量: 2
-            </div>
-            <div class="col-sm-5">
-              价格: 56RMB
-            </div>
-          </div>
-          <div style="height:5px"> </div>
-          <div class="row">
-            <div class="col-sm-4">
-              多肉青提
-            </div>
-            <div class="col-sm-3">
-              数量: 2
-            </div>
-            <div class="col-sm-5">
-              价格: 58RMB
-            </div>
-          </div>
-          <div style="height:5px"> </div>
-          <div class="row">
-            <div class="col-sm-4">
-              多肉莓莓
-            </div>
-            <div class="col-sm-3">
-              数量: 2
-            </div>
-            <div class="col-sm-5">
-              价格: 64RMB
-            </div>
-          </div>
-        </li>
-        <li class="list-group-item">地址: 南京市建邺区碧瑶花园</li>
-        <li class="list-group-item">店铺名称: 喜茶（乐山路店）</li>
-        <li class="list-group-item">用户地址: 北京航空航天大学</li>
-        <li class="list-group-item">
-          <div class="row">
-            <div class="col-sm-5">
-              <div style="height:5px"> </div>
-              总价: 178RMB
-            </div>
-            <div class="col-sm-3">
-              
-            </div>
-            <div class="col-sm-4">
-              <button type="button" class="btn btn-primary" style="width: 4rem;">
-                发货
-              </button>
-            </div>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </div>
+    
 
+  <% end %>
   
 </div>
 
+<!-- Button trigger modal -->
 
 
-<script type="text/javascript">
-var enableTable=function() {
-$('#myTab button').on('click', function (event) {
-  event.preventDefault()
-  $(this).tab('show')
-})
-};
-enableTable();
-</script>
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
