--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -12,21 +12,21 @@
   <% end %>
 
   <div>
-    <%= form.label :star, style: "display: block" %>
+    <%= form.label "星数",:star, style: "display: block" %>
     <%= form.number_field :star %>
   </div>
 
   <div>
-    <%= form.label :content, style: "display: block" %>
-    <%= form.text_area :content %>
+    <%= form.label "评论内容",:content, style: "display: block" %>
+    <%= form.text_area :content,:placeholder=>"请输入评价"%>
   </div>
 
   <div>
-    <%= form.label :order_id, style: "display: block" %>
-    <%= form.text_field :order_id %>
+    <%= form.hidden_field :order_id, value:order.id %>
   </div>
-
-  <div>
-    <%= form.submit %>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
+    <%= form.submit "确认提交",:class=>"btn btn-primary"%>
   </div>
+    
 <% end %>
