--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -66,7 +66,7 @@
                 <%= shop_item.sales %>杯/月
               </div>
               <div class="col-sm">
-                <%= link_to @shop_item, method: :delete, data: {confirm: "你确定吗？"} do%>
+                <%= link_to shop_item, method: :delete, data: {confirm: "你确定吗？"} do%>
                   <button type="button" class="btn btn-primary" style="width: 4rem; height: 2rem">
                       删除
                   </button>
