--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -2,13 +2,13 @@
 
 <ul class="nav nav-tabs" id="myTab" role="tablist">
   <li class="nav-item" role="presentation">
-    <%= link_to orders_path, method: :get do %>
-      <button class="nav-link  active" id="home-tab" data-toggle="tab" data-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">待发货</button>
+    <%= link_to new_order_path, method: :get do %>
+      <button class="nav-link " id="home-tab" data-toggle="tab" data-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">待发货</button>
     <% end %>
   </li>
   <li class="nav-item" role="presentation">
-    <%= link_to new_order_path, method: :get do %>
-      <button class="nav-link" id="profile-tab" data-toggle="tab" data-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">已发货</button>
+    <%= link_to orders_path, method: :get do %>
+      <button class="nav-link active" id="profile-tab" data-toggle="tab" data-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">已发货</button>
     <% end %>
   </li>
 </ul>
@@ -59,10 +59,11 @@
                 
               </div>
               <div class="col-sm-4">
-            <!-- Button trigger modal -->
-              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-                发货
-              </button>
+              <%= link_to my_order_delivery_path(order_id: order.id, id: order.id) , method: :post, data: {confirm: "你确定吗？"}%>
+                <button type="button" class="btn btn-primary">
+                  发货
+                </button>
+              <%= %>
                 </div>
             </div>
           </li>
@@ -75,28 +76,4 @@
 
   <% end %>
   
-</div>
-
-<!-- Button trigger modal -->
-
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
 </div>
