--- a/app/views/riders/index.html.erb
+++ b/app/views/riders/index.html.erb
@@ -3,12 +3,12 @@
 <ul class="nav nav-tabs" id="myTab" role="tablist">
   <li class="nav-item" role="presentation">
     <%= link_to orders_path, method: :get do %>
-      <button class="nav-link  active" id="home-tab" data-toggle="tab" data-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">待发货</button>
+      <button class="nav-link  active" id="home-tab" data-toggle="tab" data-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">待配送</button>
     <% end %>
   </li>
   <li class="nav-item" role="presentation">
     <%= link_to new_order_path, method: :get do %>
-      <button class="nav-link" id="profile-tab" data-toggle="tab" data-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">已发货</button>
+      <button class="nav-link" id="profile-tab" data-toggle="tab" data-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">已配送</button>
     <% end %>
   </li>
 </ul>
