--- a/app/views/sellers/show.html.erb
+++ b/app/views/sellers/show.html.erb
@@ -1,5 +1,7 @@
 <% content_for :head do %>
   <%= javascript_import_module_tag "custom/buyer_change" %>
+  <%= javascript_import_module_tag "custom/draw" %>
+<% end %>
 <% end %>
 <div style="height:20px"> </div>
 
